# sysutil

./: .gitignore  Cargo.toml  README.md
.fleet/: settings.json
python3/: README.md
python3/src/: __init__.py  sysutil.py
rust/: Cargo.toml  README.md
rust/development/: sysutil-lib.rs
rust/src/: bus.rs  cpu.rs  gpu.rs  lib.rs  motherboard.rs  network.rs  ram.rs  sensors.rs  storage.rs  sysutil-lib.rs  utils.rs
src/: sysutil-lib.rs
