[package]
name = "sysutil"
version = "0.1.0"
authors = ["cpy-dev"]
edition = "2021"
description = "Linux system utils library"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cpy-dev/sysutil"
readme = "README.md"

[lib]
path = "./src/sysutil-lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
